tests/ui/unnecessary_wraps.stderr
error[E0282]: type annotations needed
  --> $DIR/unnecessary_wraps.rs:138:9
   |
LL |         Ok(());
   |         ^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
